--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,17 @@
       "matches": ["<all_urls>"],
       "js": ["dist/main.js"]
     }
-  ]
+  ],
+
+  "browser_action": {
+    "default_icon": {
+      "19": "icons/sniper.png"
+    },
+    "default_title": "Delete html element"
+  },
+
+  "background": {
+    "scripts": ["src/background.js"]
+  }
 
 }
