--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "main": "index.js",
+  "scripts": {
+    "build": "webpack --config webpack.common.js",
+    "lint": "eslint src/"
+  },
   "dependencies": {
     "color": "^3.1.0",
     "invert-color": "^2.0.0",
     "jquery": "^3.4.1"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   }
